--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
                         <img id="preview" />
                     </div>
                     <div class="buttons">
+                        <button type="button" id="back">Back</button>
                         <button type="button" id="save">Save</button>
                         <button type="button" id="skip">Skip</button>
                     </div>
