Add reset functionality, longer summaries, and genre parsing

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
                         <button type="button" id="back">Back</button>
                         <button type="button" id="save">Save</button>
                         <button type="button" id="skip">Skip</button>
+                        <button type="button" id="reset">Reset</button>
                     </div>
                 </div>
                 <label>Name
