--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,7 @@
             <button type="button" id="revert-image">Revert Image</button>
             <div class="image-wrapper">
                 <img id="image" />
+                <div id="image-resolution" class="resolution-label"></div>
             </div>
         </div>
     </div>
