--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,8 @@
                         <img id="preview" />
                     </div>
                     <div class="buttons">
-                        <button type="button" id="back">Back</button>
+                        <button type="button" id="previous">Previous</button>
+                        <button type="button" id="next">Next</button>
                         <button type="button" id="save">Save</button>
                         <button type="button" id="skip">Skip</button>
                         <button type="button" id="reset">Reset</button>
