--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 </head>
 <body>
+    <div id="alert-banner"></div>
     <header>
         <h2 id="game-name"></h2>
         <div id="caption"></div>
