Display current record ID

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <div id="alert-banner"></div>
     <header>
         <h2 id="game-name"></h2>
+        <div id="game-id"></div>
         <div id="caption"></div>
         <div class="progress-bar"><div id="progress"></div></div>
     </header>
