--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,13 @@
 </head>
 <body>
     <div id="alert-banner"></div>
-    <header>
-        <h2 id="game-name"></h2>
-        <div id="game-id"></div>
-        <div id="caption"></div>
-        <div class="progress-bar"><div id="progress"></div></div>
-    </header>
+    <div class="top-bar">
+        <img id="cover-thumb" />
+        <div class="title-block">
+            <h2 id="game-name"></h2>
+            <div id="progress-text"></div>
+        </div>
+    </div>
     <div class="container">
         <div class="left">
             <form id="game-form">
