--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
         <div class="title-block">
             <h2 id="game-name"></h2>
             <div id="progress-text"></div>
+            <div id="game-id"></div>
         </div>
     </div>
     <div class="container">
