Expand primary fields and reposition developers and publishers

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,15 +48,17 @@
                             <select id="category"></select>
                         </label>
                     </div>
+                    <div class="secondary-fields">
+                        <label>Developers
+                            <input type="text" id="developers" />
+                        </label>
+                        <label>Publishers
+                            <input type="text" id="publishers" />
+                        </label>
+                    </div>
                 </div>
                 <label>Summary
                     <textarea id="summary"></textarea>
-                </label>
-                <label>Developers
-                    <input type="text" id="developers" />
-                </label>
-                <label>Publishers
-                    <input type="text" id="publishers" />
                 </label>
                 <div class="select-row">
                     <label>Platforms
