--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,14 @@ header {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  flex: 2;
+}
+
+.secondary-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  flex: 1;
 }
 
 header h2 {
