--- a/templates/updates.html
+++ b/templates/updates.html
@@ -102,22 +102,27 @@
                     <span class="material-symbols-rounded" aria-hidden="true">close</span>
                 </button>
             </header>
-            <div class="modal-meta">
-                <div class="meta-item">
-                    <span class="meta-label">Game ID</span>
-                    <span class="meta-value" data-modal-game-id></span>
+            <div class="modal-overview">
+                <div class="modal-cover">
+                    <img data-modal-cover alt="" />
                 </div>
-                <div class="meta-item">
-                    <span class="meta-label">IGDB ID</span>
-                    <span class="meta-value" data-modal-igdb-id></span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-label">IGDB Updated</span>
-                    <span class="meta-value" data-modal-igdb-updated></span>
-                </div>
-                <div class="meta-item">
-                    <span class="meta-label">Local Edited</span>
-                    <span class="meta-value" data-modal-local-edited></span>
+                <div class="modal-meta">
+                    <div class="meta-item">
+                        <span class="meta-label">Game ID</span>
+                        <span class="meta-value" data-modal-game-id></span>
+                    </div>
+                    <div class="meta-item">
+                        <span class="meta-label">IGDB ID</span>
+                        <span class="meta-value" data-modal-igdb-id></span>
+                    </div>
+                    <div class="meta-item">
+                        <span class="meta-label">IGDB Updated</span>
+                        <span class="meta-value" data-modal-igdb-updated></span>
+                    </div>
+                    <div class="meta-item">
+                        <span class="meta-label">Local Edited</span>
+                        <span class="meta-value" data-modal-local-edited></span>
+                    </div>
                 </div>
             </div>
             <div class="modal-body" data-modal-body>
